// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag test should render a snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1az3j4h"
    data-testid="flag"
  >
    <span
      class="css-1x1ve0y"
    >
      COMPLETE
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag test should render a snapshot with label in progress 1`] = `
<DocumentFragment>
  <div
    class="css-1az3j4h"
    data-testid="flag"
  >
    <span
      class="css-1x1ve0y"
    >
      IN PROGRESS
    </span>
  </div>
</DocumentFragment>
`;
